--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,10 @@
+[project]
+name = "personal-finance-tracker"
+version = "0.1.0"
+requires-python = ">=3.9"
+dependencies = ["pandas", "matplotlib"]
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
