--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,3 @@
-[project]
-name = "personal-finance-tracker"
-version = "0.1.0"
-requires-python = ">=3.9"
-dependencies = ["pandas", "matplotlib"]
-
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools>=65.5.0","wheel"]
 build-backend = "setuptools.build_meta"
-
