--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 name = personal-finance-tracker
 version = 0.1.0
+description = CLI-based personal finance tracker
+author = Thamizharasan T
 
 [options]
 packages = find:
